added some image files. updated the index file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>
             rudenik.github.io
+            
         </title>
     </head>
+    <body>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lxtwZReoQd0?start=79" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </body>
 </html>
